<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_login_bg"
    android:layout_gravity="bottom"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="120dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="122dp"
        app:srcCompat="@drawable/img_logo_login"
        android:contentDescription="@string/logo" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/email"
        android:background="@drawable/gradient_text"
        android:fontFamily="@font/titillium_web"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/etEmail"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="@string/password"
        android:background="@drawable/gradient_text"
        android:fontFamily="@font/titillium_web"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText" />


    <android.widget.Button
        android:id="@+id/btnLogin"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/gradient_button_theme"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="80dp"
        android:fontFamily="@font/titillium_web"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFgtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:layout_toEndOf="@+id/tvRegister"
        android:fontFamily="@font/titillium_web"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorPrimaryText"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>