<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_login_bg"
    tools:context=".PasswordReset">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/lock"
        app:srcCompat="@drawable/img_reset_password" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/gradient_text"
        android:fontFamily="@font/titillium_web"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:paddingStart="10dp"
        android:textColor="#F04E33"
        android:textColorHint="#F04E33"
        tools:ignore="RtlSymmetry"
        android:autofillHints="email"
        android:inputType="textEmailAddress" />

    <android.widget.Button
        android:id="@+id/btnReset"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etEmail"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/gradient_button_theme"
        android:text="@string/send_reset_link"
        android:textColor="@color/colorPrimaryText" />

</RelativeLayout>