<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdventureHomeActivity">


    <ImageView
        android:id="@+id/ivAdventureBG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewAdventure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/adventure_bg"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/layoutAdventureHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/scrollViewAdventure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/ivAdventureLogo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/adventure_logo"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/tvAdventureWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/gradient_title_bg"
            android:gravity="center_horizontal"
            android:text="WELCOME TO"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvStatic2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#FFFFFF"
            android:gravity="center_horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="TEZPUR UNIVERSITY \n ADVENTURE SPORTS CLUB"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvAdventureInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="#FFFFFF"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/adventure_info"
            android:textColor="@color/colorBlackTransparent"
            android:textSize="14sp"
            android:textStyle="bold"
            app:autoSizeTextType="none" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollViewAdventure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStatic4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:paddingStart="20dp"
                android:text="Our Club Activities"
                android:background="#6864DD17"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                tools:ignore="RtlSymmetry" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewCycling"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvStatic4"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/CyclingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient1"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tvCycling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:paddingHorizontal="25dp"
                        android:text="Cycling"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@id/ivCycling"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ivCycling" />

                    <ImageView
                        android:id="@+id/ivCycling"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/cycling"
                        app:layout_constraintEnd_toStartOf="@id/btnArrowCycling"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="TODO" />

                    <android.widget.Button
                        android:id="@+id/btnArrowCycling"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_down_arrow"
                        app:layout_constraintBottom_toBottomOf="@id/ivCycling"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/CyclingExpandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivCycling">

                        <TextView
                            android:id="@+id/etvCycling"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif-monospace"
                            android:padding="5dp"
                            android:text="@string/etcCycling"
                            android:textAlignment="gravity"
                            android:textColor="#4A0101"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewHiking"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvStatic4"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/HikingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient2"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tvHiking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:paddingHorizontal="25dp"
                        android:text="Hiking"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@id/ivHiking"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ivHiking" />

                    <ImageView
                        android:id="@+id/ivHiking"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/hiking"
                        app:layout_constraintEnd_toStartOf="@id/btnArrowHiking"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="TODO" />

                    <android.widget.Button
                        android:id="@+id/btnArrowHiking"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_down_arrow"
                        app:layout_constraintBottom_toBottomOf="@id/ivHiking"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/HikingExpandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivHiking">

                        <TextView
                            android:id="@+id/etvHiking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif-monospace"
                            android:padding="5dp"
                            android:text="@string/etcHiking"
                            android:textAlignment="gravity"
                            android:textColor="#4A0101"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewBiking"
                style="@style/CardView.Light"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/tvStatic4"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/BikingHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient3"
                    android:paddingBottom="10dp">

                    <TextView
                        android:id="@+id/tvBiking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:paddingHorizontal="25dp"
                        android:text="Biking"
                        android:textColor="@color/colorWhite"
                        android:textSize="24sp"
                        app:layout_constraintBottom_toBottomOf="@id/ivBiking"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/ivBiking" />

                    <ImageView
                        android:id="@+id/ivBiking"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/biking"
                        app:layout_constraintEnd_toStartOf="@id/btnArrowBiking"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="TODO" />

                    <android.widget.Button
                        android:id="@+id/btnArrowBiking"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/ic_down_arrow"
                        app:layout_constraintBottom_toBottomOf="@id/ivBiking"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/BikingExpandable"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivBiking">

                        <TextView
                            android:id="@+id/etvBiking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif-monospace"
                            android:padding="5dp"
                            android:text="@string/etcBiking"
                            android:textAlignment="gravity"
                            android:textColor="#4A0101"
                            android:textSize="13sp"
                            android:textStyle="bold"
                            app:autoSizeTextType="uniform"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>